# cam

./: pyproject.toml  test.nc  test_square.nc  visualizer.py
src/cam/: __main__.py  config.py  graphics.py  gui.py  parser.py  profiles.py  state.py
