[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cam"
version = "0.1.0"
description = "A 3D CNC G-Code visualizer"
requires-python = ">=3.8"
dependencies = [
    "vispy>=0.12.0",
    "PyQt5>=5.15.0",
    "numpy>=1.20.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
# This allows you to run the program by typing 'cam' in your terminal
cam = "cam.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
